--- a/index.html
+++ b/index.html
@@ -1,44 +1,13 @@
-<!doctype html>
-<html>
-  <head>
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="chrome=1">
-    <title>Webtorrentclient by HughIsaacs2</title>
-
-    <link rel="stylesheet" href="stylesheets/styles.css">
-    <link rel="stylesheet" href="stylesheets/github-light.css">
-    <meta name="viewport" content="width=device-width">
-    <!--[if lt IE 9]>
-    <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
-    <![endif]-->
-  </head>
-  <body>
-    <div class="wrapper">
-      <header>
-        <h1>Webtorrentclient</h1>
-        <p>Just a Web Torrent client for learning</p>
-
-        <p class="view"><a href="https://github.com/HughIsaacs2/WebTorrentClient">View the Project on GitHub <small>HughIsaacs2/WebTorrentClient</small></a></p>
-
-
-        <ul>
-          <li><a href="https://github.com/HughIsaacs2/WebTorrentClient/zipball/master">Download <strong>ZIP File</strong></a></li>
-          <li><a href="https://github.com/HughIsaacs2/WebTorrentClient/tarball/master">Download <strong>TAR Ball</strong></a></li>
-          <li><a href="https://github.com/HughIsaacs2/WebTorrentClient">View On <strong>GitHub</strong></a></li>
-        </ul>
-      </header>
-      <section>
-        <h1>
-<a id="webtorrentclient" class="anchor" href="#webtorrentclient" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>WebTorrentClient</h1>
-
-<p>Just a Web Torrent client for learning</p>
-      </section>
-      <footer>
-        <p>This project is maintained by <a href="https://github.com/HughIsaacs2">HughIsaacs2</a></p>
-        <p><small>Hosted on GitHub Pages &mdash; Theme by <a href="https://github.com/orderedlist">orderedlist</a></small></p>
-      </footer>
-    </div>
-    <script src="javascripts/scale.fix.js"></script>
-    
-  </body>
+<!DOCTYPE html>
+<html class="no-js not-loading" manifest="cache.appcache">
+<head>
+<meta content='width=device-width, minimum-scale=1, initial-scale=1, shrink-to-fit=no' name='viewport'/>
+<link rel="stylesheet" href="style.css" /></head>
+<body>
+<main>
+<aside id="player"></aside>
+</main>
+<script src="webtorrent.min.js"></script>
+<script src="script.js" type="text/javascript" defer="true"></script>
+</body>
 </html>
