Updated index.html and script.js
Added WebTorrent/WebRTC support check.
Added PNG and SVG favicons.
Added Title tag.
Added X-UA-Compatible meta tag.
Added UTF-8 meta tags.

--- a/index.html
+++ b/index.html
@@ -1,7 +1,14 @@
 <!DOCTYPE html>
-<html class="no-js not-loading" manifest="cache.appcache">
+<html class="no-js not-loading" dir="ltr" xml:lang="en" lang="en" manifest="cache.appcache">
 <head>
+<meta content='IE=edge;Chrome=1' http-equiv='X-UA-Compatible'/>
+<meta charset="utf-8" />
+<meta content='text/html; charset=UTF-8' http-equiv='Content-Type'/>
 <meta content='width=device-width, minimum-scale=1, initial-scale=1, shrink-to-fit=no' name='viewport'/>
+<title>Web Torrent Player</title>
+<link rel="icon" type="image/png" href="icon.png" sizes="128x128" defer="true" />
+<link rel="icon" type="image/svg" href="logo.svg" sizes="any" defer="true" />
+<link rel="icon" type="image/svg+xml" href="logo.svg" sizes="any" defer="true" />
 <link rel="stylesheet" href="style.css" /></head>
 <body>
 <main>
