--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 <meta content='text/html; charset=UTF-8' http-equiv='Content-Type'/>
 <meta content='width=device-width, minimum-scale=1, initial-scale=1, shrink-to-fit=no' name='viewport'/>
 <title>Web Torrent Player</title>
-<link rel="icon" type="image/png" href="icon.png" sizes="128x128" defer="true" />
+<link rel="icon" type="image/png" href="logo.png" sizes="128x128" defer="true" />
 <link rel="icon" type="image/svg" href="logo.svg" sizes="any" defer="true" />
 <link rel="icon" type="image/svg+xml" href="logo.svg" sizes="any" defer="true" />
 <link rel="stylesheet" href="style.css" /></head>
