Updated script.js and index.html
Added an IMG tag with the logo in the HTML (just for minor appearances sake).
Added a checkbox for toggling seeding (does nothing for now).
Added code to display download progress in console.log.
Added code for when the torrent is finished downloading.
Moved .loading class code to when the torrent is finished.
Added code to display the logo for when the torrent is loading.
Deleted unused styles from style.css.
Added emoji stuff to style.css.
Added a ton of fallback fonts to style.css.
Added code to animate #loading when .loading set.
Added code for when torrent is done and seeding is checked (does nothing for now).

--- a/index.html
+++ b/index.html
@@ -11,8 +11,9 @@
 <link rel="icon" type="image/svg+xml" href="logo.svg" sizes="any" defer="true" />
 <link rel="stylesheet" href="style.css" /></head>
 <body>
-<main>
-<aside id="player"></aside>
+<main><img src="logo.png" srcset="logo.svg 1x, logo.svg 2x, logo.svg 3x" alt="" width="20px" height="20px" /><br/>
+<aside id="player"></aside><br/>
+<label><input type="checkbox" id="seeding" value="seeding" checked="true"> Seed</label><br/>
 </main>
 <script src="webtorrent.min.js"></script>
 <script src="script.js" type="text/javascript" defer="true"></script>
