Updated script.js and index.html
Added a #log section to index.html
Updated download status code to display in #log
Altered torrent done code to not block other files

--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
 <main><img src="logo.png" srcset="logo.svg 1x, logo.svg 2x, logo.svg 3x" alt="" width="20px" height="20px" /><br/>
 <aside id="player"></aside><br/>
 <label><input type="checkbox" id="seeding" value="seeding" checked="true"> Seed</label><br/>
+<aside id="log"></aside><br/>
 </main>
 <script src="webtorrent.min.js"></script>
 <script src="script.js" type="text/javascript" defer="true"></script>
