--- a/index.html
+++ b/index.html
@@ -6,15 +6,14 @@
 <meta content='text/html; charset=UTF-8' http-equiv='Content-Type'/>
 <meta content='width=device-width, minimum-scale=1, initial-scale=1, shrink-to-fit=no' name='viewport'/>
 <title>Web Torrent Player</title>
+<meta content="#33ef9e" name="theme-color" />
 <link rel="icon" type="image/png" href="logo.png" sizes="228x228" defer="true" />
 <link rel="icon" type="image/svg" href="logo.svg" sizes="any" defer="true" />
 <link rel="icon" type="image/svg+xml" href="logo.svg" sizes="any" defer="true" />
 <link rel="stylesheet" href="style.css" /></head>
 <body>
 <main id="main"><img id="logo" src="logo.png" srcset="logo.svg 1x, logo.svg 2x, logo.svg 3x" alt="" width="25px" height="25px" /><br/>
-<aside id="player"><audio id="player" src="about:blank" controls="true" class="player"></audio>
-
-</aside><br/>
+<aside id="player"></aside><br/>
 <label><input type="checkbox" id="seeding" value="seeding" checked="true"> Seed</label><br/>
 <aside id="log"></aside><br/>
 </main>
