Removed checked attribute from #seeding
Removed checked attribute from #seeding

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 <body>
 <main id="main"><img id="logo" src="logo.png" srcset="logo.svg 1x, logo.svg 2x, logo.svg 3x" alt="" width="25px" height="25px" /><br/>
 <aside id="player"></aside><br/>
-<label><input type="checkbox" id="seeding" value="seeding" checked="false"> Seed files when downloaded.</label><br/>
+<label><input type="checkbox" id="seeding" value="seeding"> Seed files when downloaded.</label><br/>
 <aside id="log"></aside><br/>
 </main>
 <noscript>Sorry. This web app sadly requires JavaScript to work.</noscript>
