--- a/index.html
+++ b/index.html
@@ -12,13 +12,12 @@
 <link rel="icon" type="image/svg+xml" href="logo.svg" sizes="any" defer="true" />
 <link rel="stylesheet" href="style.css" /></head>
 <body>
-<main id="main"><img id="logo" src="logo.png" srcset="logo.svg 1x, logo.svg 2x, logo.svg 3x" alt="" width="25px" height="25px" /><br/>
+<main id="main"><img id="logo" src="logo.png" srcset="logo.svg 1x, logo.svg 2x, logo.svg 3x" alt="" width="25px" height="25px" /><br/><noscript>Sorry. This web app sadly requires JavaScript to work.</noscript>
 <aside id="player"></aside><br/>
-<label><input type="checkbox" id="seeding" value="seeding" disabled="disabled"> Seed files when downloaded.</label><br/>
+<label><input type="checkbox" id="seeding" value="seeding"> Seed files when downloaded.</label><br/>
 <aside id="log"></aside><br/>
-<aside id="info"></aside><br/>
+<progress id="progress" value="0" max="1">0</progress></br>
 </main>
-<noscript>Sorry. This web app sadly requires JavaScript to work.</noscript>
 <script type="text/javascript" src="modernizr-custom.js"></script>
 <script type="text/javascript" src="webtorrent.min.js"></script>
 <script type="text/javascript" src="playlist-parser.min.js"></script>
