--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <link rel="icon" type="image/svg+xml" href="logo.svg" sizes="any" defer="true" />
 <link rel="stylesheet" href="style.css" defer="true" /></head>
 <body>
-<main id="main"><img id="logo" src="logo.png" srcset="logo.svg 1x, logo.svg 2x, logo.svg 3x" alt="" width="25px" height="25px" defer="true" />v0.0.1<br/><noscript>Sorry. This web app sadly requires JavaScript to work.</noscript>
+<main id="main"><img id="logo" src="logo.png" srcset="logo.svg 1x, logo.svg 2x, logo.svg 3x" alt="" width="25px" height="25px" defer="true" /><br/><sub>v0.0.1</sub><br/><noscript>Sorry. This web app sadly requires JavaScript to work.</noscript>
 <aside id="player"></aside><br/>
 <label><input type="checkbox" id="seeding" value="seeding" disabled="disabled"> Seed files when downloaded.</label><br/>
 <progress id="progress" title="0" value="0" max="1">0</progress></br>
