--- a/iframe-test.html
+++ b/iframe-test.html
@@ -1,6 +1,16 @@
 <html manifest="cache.appcache">
 <head>
-<title>WebTorrent Player Test</title>
+<meta content='IE=edge;Chrome=1' http-equiv='X-UA-Compatible'/>
+<meta charset="utf-8" />
+<meta content='text/html; charset=UTF-8' http-equiv='Content-Type'/>
+<meta content='width=device-width, minimum-scale=1, initial-scale=1, shrink-to-fit=no' name='viewport'/>
+<title>Web Torret Player Test</title>
+<meta content="red" name="theme-color" />
+<link rel="icon" type="image/png" href="logo.png" sizes="228x228" lazyload="1" />
+<link rel="icon" type="image/svg" href="logo.svg" sizes="any" lazyload="1" />
+<link rel="icon" type="image/svg+xml" href="logo.svg" sizes="any" lazyload="1" />
+<link rel="stylesheet" href="style.css" lazyload="1" />
+<link rel="manifest" href="webtorrentplayer.webmanifest"/>
 <style>
 body {
 background-color: red;
