--- a/iframe-test.html
+++ b/iframe-test.html
@@ -18,6 +18,7 @@ background-color: red;
 </style>
 </head>
 <body>
+<h1>Iframe test</h1>
 
 <iframe src="index.html#a88fda5954e89178c372716a6a78b8180ed4dad3" width="300" height="380" frameborder="0" scrolling="no" allowtransparency="true" lazyload="1" loading="lazy" importance="low" allowfullscreen="true" sandbox="allow-scripts allow-forms allow-popups allow-presentation" allow="speaker; picture-in-picture; animations; fullscreen; encrypted-media; unsized-media 'none'; geolocation 'none'; midi 'none'; payment 'none'; accelerometer 'none'; vr 'none'; camera 'none'; magnetometer 'none'; usb 'none'; ambient-light-sensor 'none'; gyroscope 'none'; microphone 'none'; document-write 'none'; vertical-scroll 'none';"></iframe>
 
